--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
 set(test
-test1.cpp)
-
+  test1.cpp
+  )
+# The executables to be generated
 add_executable(test ${test})
+# The libraries to link against
+#target_link_libraries(test test)
